add /markets/futures/quotes and /markets/futures/contracts endpoint, as well as transform ice into a stream
